--- a/flida_auth_sdk/example/web/index.html
+++ b/flida_auth_sdk/example/web/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -20,6 +21,11 @@
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
 
+  <!-- Flida SDK Config -->
+  <!-- Format: clientid.domain (e.g., "019bacf9-f8b5-79bc-ac04-207c31b4c8ed.flida.dev") -->
+  <meta name="flida-config" content="019bacf9-f8b5-79bc-ac04-207c31b4c8ed.flida.dev">
+  <meta name="flida-redirect-uri" content="https://test.ru/">
+
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -27,11 +33,12 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png" />
 
   <title>example</title>
   <link rel="manifest" href="manifest.json">
 </head>
+
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
@@ -101,4 +108,5 @@
     }
   </script>
 </body>
+
 </html>
